Fixing light/dark mode coming from localStorage and making theming global

--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,17 +1,21 @@
-$l-background: #e0e0e0;
-$l-text: #212121;
-$l-green: #5dbd1e;
-$l-orange: #eb5905;
-$l-pink: #bd1e5e;
-$l-yellow: #f5e06a;
-$l-purple: #cb6af5;
-$l-blue: #65a6f0;
+:global(.light-theme) {
+	--color-bg: #ffffff;
+	--color-text: #121212;
+	--color-green: #5dbd1e;
+	--color-orange: #eb5905;
+	--color-pink: #bd1e5e;
+	--color-yellow: #f5e06a;
+	--color-purple: #cb6af5;
+	--color-blue: #65a6f0;
+}
 
-$d-background: #121212;
-$d-text: #ffffff;
-$d-green: #6af5a1;
-$d-orange: #f09a65;
-$d-pink: #f5786a;
-$d-yellow: #ebbd05;
-$d-purple: #8f05eb;
-$d-blue: #057feb;
+:global(.dark-theme) {
+	--color-bg: #121212;
+	--color-text: #ffffff;
+	--color-green: #6af5a1;
+	--color-orange: #f09a65;
+	--color-pink: #f5786a;
+	--color-yellow: #ebbd05;
+	--color-purple: #8f05eb;
+	--color-blue: #057feb;
+}
